--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "hashtable": "cpp",
         "tuple": "cpp",
         "complex": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "fdf.h": "c"
     },
     "C_Cpp.dimInactiveRegions": false
 }
